Change logo text from 'BP' to 'CB'

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 <header>
   <div class="header-inner">
     <div class="brand">
-      <div class="logo">BP</div>
+      <div class="logo">CB</div>
       <div>
         <h1>Club Bornoporichoy</h1>
         <div class="sub">Durga Puja Dashboard</div>
