Add village collection to database collections

--- a/index.html
+++ b/index.html
@@ -458,6 +458,8 @@ const MONTHS = ["Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov
 const invitationCol = db.collection("invitations");
 const membersCol = db.collection("members");
 const collectorsCol = db.collection("collectors");
+const villageCollectionCol = db.collection("village_collections");
+
 function membershipFeesCollectionFor(year){ return db.collection(`membership_fees_${year}`); }
 
 /* ---------------- fee-year dropdowns (2025-2050) ---------------- */
