--- a/index.html
+++ b/index.html
@@ -396,6 +396,45 @@
         </div>
       </div>
     </div>
+<!-- Village Collection Tracker -->
+<div class="card" id="village-collection">
+  <h2>🏘️ Village Collection Tracker</h2>
+  <div class="subtitle">Track donations per village and collector</div>
+
+  <div style="display:flex;gap:10px;flex-wrap:wrap;align-items:center;margin-top:12px">
+    <input id="vc-bill" type="text" placeholder="Bill No" style="min-width:120px" />
+    
+    <select id="vc-collector" style="min-width:160px">
+      <option value="">-- Select Collector --</option>
+    </select>
+
+    <input id="vc-amount" type="number" placeholder="Amount (₹)" style="min-width:120px" />
+    <input id="vc-remarks" type="text" placeholder="Remarks" style="min-width:200px" />
+
+    <select id="vc-village" style="min-width:160px">
+      <option value="">-- Select Village --</option>
+    </select>
+
+    <button id="add-vc-btn" class="btn small">Add Collection</button>
+  </div>
+
+  <table id="vc-table" style="margin-top:12px">
+    <thead>
+      <tr>
+        <th>Bill No</th>
+        <th>Collector</th>
+        <th>Amount (₹)</th>
+        <th>Remarks</th>
+        <th>Village</th>
+        <th>Date Added</th>
+        <th>Actions</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
+
+  <input id="search-vc" type="text" placeholder="Search collections..." style="margin-top:12px;width:100%;padding:8px;border-radius:8px;border:1px solid #ccc;" />
+</div>
 
   </div> <!-- main-content -->
 </div> <!-- container -->
