Add village options to the select dropdown

--- a/index.html
+++ b/index.html
@@ -414,6 +414,12 @@
 
     <select id="vc-village" style="min-width:160px">
       <option value="">-- Select Village --</option>
+      <option value="Madhabpur">Madhabpur</option>
+      <option value="Paldhui">Paldhui</option>
+      <option value="Sabitrapur">Sabitrapur</option>
+      <option value="Lalupool">Lalupool</option>
+      <option value="Mahakal">Mahakal</option>
+      <option value="Others">Others</option>
     </select>
 
     <button id="add-vc-btn" class="btn small">Add Collection</button>
