--- a/index.html
+++ b/index.html
@@ -1644,20 +1644,22 @@ const INCOME_CATEGORIES = [
 const EXPENSE_CATEGORIES = [
     'Pandal & Decorations', 'Idol & Materials', 'Priest & Rituals',
     'Electricity & Sound', 'Security', 'Food & Prasad', 'Cultural Program',
-    'Printing & Publicity', 'Transportation', 'Miscellaneous'
+    'Printing & Publicity', 'Transportation', 'Miscellaneous', 'Bene Hat | Kapor Hat | Handi Hat | Kansha Hat', 'Awards & others'
 ];
 
 const BUDGET_ITEMS = {
-    'Pandal & Decorations': 50000,
-    'Idol & Materials': 30000,
+    'Pandal & Decorations': 70000,
+    'Idol & Materials': 40000,
     'Priest & Rituals': 15000,
-    'Electricity & Sound': 10000,
+    'Electricity & Sound': 30000,
     'Security': 8000,
-    'Food & Prasad': 20000,
+    'Food & Prasad': 40000,
     'Cultural Program': 15000,
-    'Printing & Publicity': 5000,
+    'Printing & Publicity': 20000,
     'Transportation': 7000,
-    'Miscellaneous': 12000
+    'Miscellaneous': 12000,
+    'Bene Hat | Kapor Hat | Handi Hat | Kansha Hat': 35000,
+    'Awards & others': 10000 
 };
 
 /* ---------------- Global Year Selection System ---------------- */
