--- a/index.html
+++ b/index.html
@@ -1644,7 +1644,7 @@ const INCOME_CATEGORIES = [
 const EXPENSE_CATEGORIES = [
     'Pandal & Decorations', 'Idol & Materials', 'Priest & Rituals',
     'Electricity & Sound', 'Security', 'Food & Prasad', 'Cultural Program',
-    'Printing & Publicity', 'Transportation', 'Miscellaneous', 'Bene Hat | Kapor Hat | Handi Hat | Kansha Hat', 'Awards & others'
+    'Printing & Publicity', 'Transportation', 'Miscellaneous', 'Bene Hat | Kapor Hat | Handi Hat | Kansha Hat', 'Awards & others', 'Club Construction'
 ];
 
 const BUDGET_ITEMS = {
@@ -1659,7 +1659,8 @@ const BUDGET_ITEMS = {
     'Transportation': 7000,
     'Miscellaneous': 12000,
     'Bene Hat | Kapor Hat | Handi Hat | Kansha Hat': 35000,
-    'Awards & others': 10000 
+    'Awards & others': 10000,
+    'Club Construction': 80000
 };
 
 /* ---------------- Global Year Selection System ---------------- */
