--- a/index.html
+++ b/index.html
@@ -1643,8 +1643,8 @@ const INCOME_CATEGORIES = [
 
 const EXPENSE_CATEGORIES = [
     'Pandal & Decorations', 'Idol & Materials', 'Priest & Rituals',
-    'Electricity & Sound', 'Security', 'Food & Prasad', 'Cultural Program',
-    'Printing & Publicity', 'Transportation', 'Miscellaneous', 'Bene Hat | Kapor Hat | Handi Hat | Kansha Hat', 'Awards & others', 'Club Construction'
+    'Electricity & Sound', 'Cooking and Materials', 'Food & Prasad', 'Cultural Program',
+    'Printing & Publicity', 'Transportation', 'Miscellaneous', 'Bene Hat|Kapor Hat|Handi Hat|Kansha Hat', 'Awards & others', 'Club Construction'
 ];
 
 const BUDGET_ITEMS = {
@@ -1652,13 +1652,13 @@ const BUDGET_ITEMS = {
     'Idol & Materials': 40000,
     'Priest & Rituals': 15000,
     'Electricity & Sound': 30000,
-    'Security': 8000,
+    'Cooking and Materials': 8000,
     'Food & Prasad': 40000,
     'Cultural Program': 15000,
     'Printing & Publicity': 20000,
     'Transportation': 7000,
     'Miscellaneous': 12000,
-    'Bene Hat | Kapor Hat | Handi Hat | Kansha Hat': 35000,
+    'Bene Hat|Kapor Hat|Handi Hat|Kansha Hat': 35000,
     'Awards & others': 10000,
     'Club Construction': 80000
 };
